<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/widget_shape"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:background="@drawable/text_shape"
        android:text="TextView"
        android:textSize="@dimen/text_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/suface_shape"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:text="@string/equal"
            android:textSize="@dimen/text_font_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:gravity="right"
            android:text="TextView"
            android:textSize="@dimen/text_font_size" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:columnCount="4"
        android:rowCount="5">

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/left" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/right" />

        <ImageView
            android:src="@drawable/ic_backspace_fill0_wght400_grad0_opsz48"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_delete"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="@dimen/button_font_size" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_ac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/ac" />


        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_7" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_8" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight = "1"
            android:textSize="@dimen/button_font_size"
            android:text="@string/_9" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/plus" />


        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_4" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_5" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight = "1"
            android:textSize="@dimen/button_font_size"
            android:text="@string/_6" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/minus" />


        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_1" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_2" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight = "1"
            android:textSize="@dimen/button_font_size"
            android:text="@string/_3" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/multiply" />


        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_00"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_00" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/_0" />

        <TextView
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight = "1"
            android:textSize="@dimen/button_font_size"
            android:text="@string/dot" />

        <TextView
            android:padding="4dp"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:id="@+id/bt_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_font_size"
            android:layout_columnWeight = "1"
            android:text="@string/divide" />
    </GridLayout>
</LinearLayout>